# UESTC_course_data

./: .gitattributes  README.md  宝宝字典  推荐老师和课程.txt  标准实验报告.doc  计算机学院各教授研究方向.xls  选课培训.ppt  选课系统链接.txt
大一上/: 《军事理论》复习知识点（最终版）.doc
大一上/计算机导论/: 平时作业.doc  第1次课.doc  计算机导论报告模板.docx  计算机导论论文.docx  论文报告要求.ppt
大一下/: 认定舞台1学分.docx  认定讲坛1学分.docx
大一下/数学实验(不推荐)/: Untitled.m  Untitled2.m  Untitled3.m  Untitled4.m  Untitled5.m  Untitled6.m
大一下/电路分析与模拟电路/: 实验一 定理验证及一阶电路仿真.pptx  实验一.doc  实验二 单管与运放电路计算机学院.pptx  实验二.doc
大一下/程序设计基础躲避游戏/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Resource.aps  Resource.rc  acllib.c  acllib.h  main.c  实验报告.doc
大三上/人工智能/: 人工智能-复习大纲-202112.docx  第一次作业PPT.pptx  第三次作业PPT.pptx
大三上/人工智能(推荐)/: AI-答疑.pptx  README  第二次作业PPT.pptx
大三上/大数据应用技术专题(别选，快run)/: 论文.docx
大三上/毛概/: 毛概.xmind
大三上/计算机操作系统/: 第三章作业参考答案.docx  第二章作业1参考答案.docx  第二章作业2参考答案.docx  第二章作业3参考答案.docx  第二章作业4参考答案.docx  第五章作业参考答案.docx  (+2 more)
大三下/: 光计算课题报告.docx
大二上/: 电装实习实验报告.doc  音乐鉴赏.docx
大四上/: 音乐发展史.docx
大四上/软件开发实验/backup_tool/: .git.7z  .gitignore  CMakeLists.txt  README  README.md  backup.cpp  compile.bash  compress.cpp  compress.h  encrypt.h  file_info.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.cpp  md5.h  restore.cpp  utils.h  verify.h
大四上/软件开发实验/backup_tool/doc/: 小组系统设计文档.docx  小组软件测试报告.docx  答辩PPT.pptx  软件需求分析.docx
综合测评保研等分数计算/: -关于开展推荐2021届优秀应届本科毕业生免试攻读研究生工作的通知.docx  成绩排名证明（中英文）.doc  特殊学术专长推免生申请表（2020版）.doc  电子科技大学提前毕业申请表.doc  电子科技大学本科学生卷面成绩查询申请表.doc  电子科技大学本科生创新与拓展项目学分申请表.doc  电子科技大学辅修专业申请表.doc  电子科技大学辅修课程报名表.doc  缓考申请表.doc  获奖证明翻译模板.doc
(+894 files in other folders)
